test/expected/cast_pfx_i.out
cast p into pointer to function (x) returning int
                                 ^
34: error: type specifier required since C23
